turtleart.star.Star.scala.error
Erreur de compilation :
Star:5: error: value - is not a member of Unit
                gauche(180-180.toDouble/5)-36}
                                          ^